--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-image: url();
-    background-color: aquamarine;
+    background-color: rgb(127, 249, 255);
 }
 
 /*header*/
